hphp/test/zend/good/Zend/tests/bug41633_2.php.expectf

Fatal error: Couldn't find constant Foo::B in %s/bug41633_2.php on line 3
